# authtastic

./: Cargo.toml  README.md
cli/: Cargo.toml
wasm/: CONTRIBUTING.md  Cargo.toml  README.md
wasm/src/: lib.rs
web/: .eslintrc.json  .prettierignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  styles.css  tsconfig.json  vite.config.ts
web/app/: main.ts
web/src/: client.ts  index.ts  redirect.ts  utils.js
