[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Shnoorg <shnoorg@proton.me>"]
repository = "https://github.com/shnoorg/authtastic"
description = "WebAssembly + JavaScript bindings for OPAQUE client operations."

[dependencies]
wasm-bindgen = "0.2.87"
argon2 = "0.5"
opaque-ke = { version = "3.0.0-pre.4", features = ["ristretto255", "argon2"] }
serde = { version = "1.0", features = ["derive"] }
getrandom = { version = "0.2.15", features = ["js"] }
rand = { version = "0.8.5", features = ["getrandom"] }

[lib]
crate-type = ["cdylib", "rlib"]
